<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/setting_v1"
    tools:context=".SettingFragment">

    <ImageButton
        android:id="@+id/back"
        android:layout_width="55dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"

        android:background="#00FF0000"
        android:contentDescription="@string/back"
        android:src="@drawable/back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/changeAvatar"
        android:layout_width="195dp"
        android:layout_height="60dp"
        android:background="@drawable/ripple"
        android:textStyle="bold"
        android:contentDescription="@string/changeAvatar"
        android:text="@string/changeAvatar"
        app:layout_constraintBottom_toTopOf="@+id/shareCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.84" />

    <Button
        android:id="@+id/shareCode"
        android:layout_width="195dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/ripple"
        android:contentDescription="@string/shareQR"
        android:text="Share QR Code"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/feedbackCentre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/feedbackCentre"
        android:layout_width="195dp"
        android:layout_height="60dp"
        android:background="@drawable/ripple"
        android:contentDescription="@string/feedbackCentre"
        android:text="Feedback Centre"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.706" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="124dp"
        android:layout_height="142dp"
        android:src="@drawable/chatbot_avatar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/basicSettings"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/changeAvatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.419" />

</androidx.constraintlayout.widget.ConstraintLayout>