<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FeedbackFragment">


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/feedback_v1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/back"
        android:layout_width="55dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"

        android:background="#00FF0000"
        android:contentDescription="@string/back"
        android:src="@drawable/back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/submit"
        android:layout_width="50dp"
        android:layout_height="72dp"
        android:background="#00FF0000"
        android:contentDescription="@string/submit"
        android:src="@drawable/submit"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.588"
        app:layout_constraintStart_toEndOf="@+id/editTextTextMultiLine"
        app:layout_constraintTop_toTopOf="@+id/editTextTextMultiLine"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/microphone"
        android:layout_width="50dp"
        android:layout_height="72dp"
        android:background="#00FF0000"
        android:contentDescription="@string/submit"
        android:src="@drawable/speech"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextMultiLine"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextMultiLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextTextMultiLine"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="288dp"
        android:layout_height="72dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/give_your_feedback"
        android:inputType="textMultiLine"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.9" />

    <ImageView
        android:id="@+id/advice"
        android:layout_width="201dp"
        android:layout_height="117dp"
        android:src="@drawable/fb_anyadvice"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.385"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.895" />
    <ImageView
        android:id="@+id/success"
        android:layout_width="201dp"
        android:layout_height="117dp"
        android:src="@drawable/fb_success"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.385"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.895" />


</androidx.constraintlayout.widget.ConstraintLayout>